--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Увертюра Иордан — Психоделический хаос</title>
 <style>
+/* --- Базовый стиль --- */
 body {
   margin: 0;
   padding: 0;
@@ -13,10 +14,10 @@ body {
   background: #0a001f;
   color: #fff;
   transition: background 3s;
-  filter: contrast(1.2) saturate(1.5);
+  position: relative;
 }
 
-/* Заголовок с глитчем */
+/* --- Заголовок с глитчем и аномалиями --- */
 h1 {
   font-size: 4em;
   text-align: center;
@@ -44,7 +45,7 @@ h1 span {
   90%{transform:translate(0,2px) rotate(0deg);}
 }
 
-/* Альбом */
+/* --- Альбом --- */
 .album {
   text-align: center;
   margin-bottom: 80px;
@@ -60,7 +61,7 @@ h1 span {
   transition: transform 0.5s, filter 0.5s;
 }
 .album img:hover {
-  transform: scale(1.1) rotate(3deg) hue-rotate(150deg) saturate(1.8) blur(1px);
+  transform: scale(1.05) rotate(2deg) hue-rotate(120deg);
 }
 .tracklist {
   margin-top: 20px;
@@ -82,14 +83,9 @@ h1 span {
   border: none;
   cursor: pointer;
   font-size: 1.1em;
-  transition: transform 0.3s, box-shadow 0.3s;
-}
-.show-tracks:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 20px #fff;
 }
 
-/* Галерея */
+/* --- Галерея --- */
 .gallery {
   display: flex;
   justify-content: center;
@@ -104,15 +100,14 @@ h1 span {
   height: 200px;
   object-fit: cover;
   border: 3px solid #fff;
-  transition: transform 0.5s, filter 0.5s, box-shadow 0.5s;
+  transition: transform 0.5s, filter 0.5s;
 }
 .gallery img:hover {
-  transform: scale(1.3) rotate(10deg);
-  filter: hue-rotate(90deg) blur(2px) saturate(2);
-  box-shadow: 0 0 20px #ff0, 0 0 40px #0ff;
+  transform: scale(1.2) rotate(5deg);
+  filter: hue-rotate(90deg) blur(1px);
 }
 
-/* Туман и линии */
+/* --- Туман и линии --- */
 .fog {
   position: fixed;
   top:0; left:0;
@@ -120,13 +115,13 @@ h1 span {
   background: url('images/photo1.jpg') repeat;
   opacity: 0.08;
   pointer-events: none;
-  animation: fogmove 80s linear infinite;
+  animation: fogmove 60s linear infinite;
   z-index: 1;
-  filter: blur(12px) brightness(0.8);
+  filter: blur(10px);
 }
 @keyframes fogmove {
   0%{background-position:0 0;}
-  100%{background-position:1500px 1500px;}
+  100%{background-position:1000px 1000px;}
 }
 .lines {
   position: fixed;
@@ -141,7 +136,7 @@ h1 span {
   width: 2px;
   height: 100%;
   background: linear-gradient(to bottom, #f0f, #0ff, #ff0);
-  opacity: 0.12;
+  opacity: 0.15;
   animation: lineMove 5s linear infinite;
 }
 @keyframes lineMove {
@@ -149,7 +144,7 @@ h1 span {
   100%{transform:translateX(100vw);}
 }
 
-/* Курсор */
+/* --- Лизергиновый курсор --- */
 body{cursor:none;}
 .cursor{
   width:50px;height:50px;
@@ -161,7 +156,6 @@ body{cursor:none;}
   animation:pulse 2s infinite;
   background:conic-gradient(#ff0,#f0f,#0ff,#f0f,#ff0);
   mix-blend-mode:difference;
-  box-shadow:0 0 20px #fff;
 }
 @keyframes pulse{
   0%,100%{transform:scale(1) translate(-50%,-50%);}
@@ -181,7 +175,7 @@ body{cursor:none;}
   100%{opacity:0; transform:scale(0);}
 }
 
-/* Аномалии текста */
+/* --- Аномалии текста --- */
 .anom{
   display:inline-block;
   position:relative;
@@ -200,18 +194,41 @@ body{cursor:none;}
   90%{transform:translate(0,2px) rotate(0deg);}
 }
 
-/* Слабая дрожь альбома */
+/* --- Слабая дрожь альбома --- */
 @keyframes subtleShake{
   0%,100%{transform:translate(0,0);}
   25%{transform:translate(1px,-1px);}
   50%{transform:translate(-1px,1px);}
   75%{transform:translate(1px,1px);}
 }
+
+/* --- Мерцающий шум --- */
+.noise {
+  position: fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  pointer-events:none;
+  z-index:10;
+  background: repeating-linear-gradient(
+    0deg,
+    rgba(255,255,255,0.03) 0px,
+    rgba(255,255,255,0.03) 1px,
+    transparent 1px,
+    transparent 2px
+  );
+  mix-blend-mode: difference;
+  animation: flicker 0.1s infinite;
+}
+@keyframes flicker{
+  0%,100%{opacity:0.05;}
+  50%{opacity:0.15;}
+}
 </style>
 </head>
 <body>
 <div class="fog"></div>
 <div class="lines"></div>
+<div class="noise"></div>
 
 <h1 id="title">
   <span class="anom">У</span>
@@ -243,26 +260,24 @@ body{cursor:none;}
 
 <div class="gallery">
   <img src="images/photo1.jpg" alt="Gallery Image" class="anom">
-  <img src="images/photo2.jpg" alt="Gallery Image" class="anom">
-  <img src="images/photo3.jpg" alt="Gallery Image" class="anom">
 </div>
 
 <div class="cursor"></div>
 
 <script>
-// --- Курсор и следы ---
+// --- Лизергиновый курсор и следы ---
 const cursor=document.querySelector('.cursor');
 document.addEventListener('mousemove', e=>{
   cursor.style.transform=`translate(${e.clientX}px,${e.clientY}px)`;
-  for(let i=0;i<3;i++){
+  for(let i=0;i<4;i++){
     const trail=document.createElement('div');
     trail.classList.add('trail');
-    trail.style.left=e.clientX+Math.random()*30-15+'px';
-    trail.style.top=e.clientY+Math.random()*30-15+'px';
-    trail.style.width=10+Math.random()*10+'px';
+    trail.style.left=e.clientX+Math.random()*20-10+'px';
+    trail.style.top=e.clientY+Math.random()*20-10+'px';
+    trail.style.width=8+Math.random()*12+'px';
     trail.style.height=trail.style.width;
     document.body.appendChild(trail);
-    setTimeout(()=>trail.remove(),1200);
+    setTimeout(()=>trail.remove(),1000);
   }
 });
 
@@ -275,10 +290,10 @@ btn.addEventListener('click',()=>{tracklist.style.display=tracklist.style.displa
 const anomElems=document.querySelectorAll('.anom');
 setInterval(()=>{
   anomElems.forEach(el=>{
-    el.style.transform=`translate(${Math.random()*20-10}px,${Math.random()*20-10}px) rotate(${Math.random()*20-10}deg)`;
+    el.style.transform=`translate(${Math.random()*30-15}px,${Math.random()*30-15}px) rotate(${Math.random()*15-7}deg)`;
     el.style.filter=`hue-rotate(${Math.random()*360}deg) blur(${Math.random()*3}px)`;
   });
-}, 250);
+}, 300);
 
 // --- Линии ---
 const linesContainer=document.querySelector('.lines');
@@ -290,31 +305,62 @@ for(let i=0;i<60;i++){
   linesContainer.appendChild(line);
 }
 
-// --- Пульсирующий фон ---
+// --- Фон пульсирующий ---
 const body=document.body;
 setInterval(()=>{
-  body.style.background=`radial-gradient(circle at ${Math.random()*100}% ${Math.random()*100}%, hsl(${Math.random()*360},100%,15%), #0a001f)`;
-},2000);
+  body.style.background=`radial-gradient(circle at ${Math.random()*100}% ${Math.random()*100}%, hsl(${Math.random()*360},100%,10%), #0a001f)`;
+},1500);
 
 // --- Эксплозивные аномалии ---
 setInterval(()=>{
   const div=document.createElement('div');
-  const size=20+Math.random()*50;
   div.style.position='fixed';
-  div.style.width=size+'px';
-  div.style.height=size+'px';
+  div.style.width='50px';
+  div.style.height='50px';
   div.style.borderRadius='50%';
   div.style.left=Math.random()*window.innerWidth+'px';
   div.style.top=Math.random()*window.innerHeight+'px';
   div.style.background=`conic-gradient(hsl(${Math.random()*360},100%,50%),hsl(${Math.random()*360},100%,50%))`;
   div.style.mixBlendMode='difference';
   div.style.opacity='0.5';
-  div.style.transition='all 1s ease-out';
   document.body.appendChild(div);
-  setTimeout(()=>{div.style.opacity=0; div.style.transform='scale(0)';},100);
-  setTimeout(()=>div.remove(),1500);
-},600);
+  setTimeout(()=>div.remove(),1000);
+},500);
 
+// --- Эффекты галереи ---
+const galleryImages = document.querySelectorAll('.gallery img');
+setInterval(() => {
+  galleryImages.forEach(img => {
+    const dx = Math.random() * 20 - 10;
+    const dy = Math.random() * 20 - 10;
+    const rot = Math.random() * 20 - 10;
+    const hue = Math.random() * 360;
+    img.style.transform = `translate(${dx}px,${dy}px) rotate(${rot}deg)`;
+    img.style.filter = `hue-rotate(${hue}deg) blur(1px)`;
+  });
+}, 1000);
+
+// --- Световые вспышки на клик ---
+document.addEventListener('click', e => {
+  const flash = document.createElement('div');
+  flash.style.position = 'fixed';
+  flash.style.left = e.clientX + 'px';
+  flash.style.top = e.clientY + 'px';
+  flash.style.width = '120px';
+  flash.style.height = '120px';
+  flash.style.borderRadius = '50%';
+  flash.style.background = 'radial-gradient(circle, #fff, transparent)';
+  flash.style.opacity = 0.8;
+  flash.style.pointerEvents = 'none';
+  flash.style.transform = 'translate(-50%, -50%) scale(0)';
+  flash.style.transition = 'transform 0.5s, opacity 0.5s';
+  document.body.appendChild(flash);
+  requestAnimationFrame(() => {
+    flash.style.transform = 'translate(-50%, -50%) scale(3)';
+    flash.style.opacity = 0;
+  });
+  setTimeout(() => flash.remove(), 500);
+});
 </script>
 </body>
 </html>
