--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ультра Психоделика</title>
+<title>Психоделический Хаос</title>
 <style>
 body {
   margin: 0;
@@ -29,22 +29,6 @@ h1 span {
   transition: transform 0.1s, color 0.1s;
 }
 
-/* --- Галерея --- */
-.gallery {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 40px;
-  margin: 60px 0;
-}
-.gallery img {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-  border: 3px solid #fff;
-  transition: transform 0.2s, filter 0.2s;
-}
-
 /* --- Лизергиновый курсор --- */
 .cursor{
   width: 60px;
@@ -63,133 +47,89 @@ h1 span {
   50%{transform:translate(-50%,-50%) scale(1.4);}
 }
 
-/* --- Шум --- */
-.noise {
+/* --- Лизергиновое облако --- */
+.psy-cloud {
   position: fixed;
-  top:0; left:0;
-  width:100%; height:100%;
-  pointer-events:none;
-  z-index:10;
-  background: repeating-linear-gradient(
-    0deg,
-    rgba(255,255,255,0.03) 0px,
-    rgba(255,255,255,0.03) 1px,
-    transparent 1px,
-    transparent 2px
-  );
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  pointer-events: none;
+  z-index: 998;
+  background: conic-gradient(hsl(0,100%,50%),hsl(60,100%,50%),hsl(120,100%,50%),hsl(180,100%,50%),hsl(240,100%,50%),hsl(300,100%,50%),hsl(360,100%,50%));
   mix-blend-mode: difference;
-  animation: flicker 0.1s infinite;
-}
-@keyframes flicker{
-  0%,100%{opacity:0.05;}
-  50%{opacity:0.15;}
+  opacity: 0.6;
+  transform: translate(-50%,-50%);
 }
 
-/* --- Линии --- */
-.lines {
+/* --- Всплывающие странные элементы --- */
+.strange {
   position: fixed;
-  top:0; left:0;
-  width:100%; height:100%;
-  pointer-events:none;
-  z-index:2;
-  overflow: hidden;
-}
-.line {
-  position: absolute;
-  width: 2px;
-  height: 100%;
-  background: linear-gradient(to bottom, #f0f, #0ff, #ff0);
-  opacity: 0.15;
-  animation: lineMove 5s linear infinite;
-}
-@keyframes lineMove {
-  0%{transform:translateX(0);}
-  100%{transform:translateX(100vw);}
-}
-
-/* --- Альбом --- */
-.album {
-  text-align: center;
-  margin-bottom: 80px;
-  position: relative;
-  z-index: 5;
-}
-.album img {
-  width: 400px;
-  height: 400px;
-  object-fit: cover;
-  border: 4px solid #fff;
-  transition: transform 0.5s, filter 0.5s;
-}
-.album img:hover {
-  transform: scale(1.05) rotate(2deg) hue-rotate(120deg);
-  filter: blur(1px);
-}
-.tracklist {
-  margin-top: 20px;
-  display: none;
-  text-align: left;
-  max-width: 400px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.tracklist audio {
-  width: 100%;
-  margin-bottom: 10px;
-}
-.show-tracks {
-  margin-top: 20px;
-  padding: 10px 20px;
-  background: #fff;
-  color: #000;
-  border: none;
-  cursor: pointer;
-  font-size: 1.1em;
+  pointer-events: none;
+  z-index: 900;
+  font-size: 2em;
+  font-weight: bold;
+  color: red;
+  mix-blend-mode: difference;
+  opacity: 0.8;
+  transition: transform 0.5s, opacity 0.5s;
 }
 </style>
 </head>
 <body>
-<div class="lines"></div>
-<div class="noise"></div>
 
 <h1 id="title">
-  <span>У</span><span>л</span><span>ь</span><span>т</span><span>р</span><span>а</span> 
-  <span>П</span><span>с</span><span>и</span><span>х</span><span>о</span><span>д</span><span>е</span><span>л</span><span>и</span><span>к</span>
+  <span>Т</span><span>р</span><span>и</span><span>п</span><span>о</span><span>в</span>
+  <span>ы</span> <span>й</span> <span>Х</span><span>а</span><span>о</span><span>с</span>
 </h1>
-
-<div class="album">
-  <img src="images/album1.jpg" alt="Album 1">
-  <button class="show-tracks">Показать треки</button>
-  <div class="tracklist">
-    <audio controls src="audio/track1.mp3"></audio>
-    <audio controls src="audio/track2.mp3"></audio>
-  </div>
-</div>
-
-<div class="gallery">
-  <img src="images/photo1.jpg" alt="Gallery Image">
-  <img src="images/photo2.jpg" alt="Gallery Image">
-</div>
 
 <div class="cursor"></div>
 
 <script>
 // --- Курсор ---
 const cursor=document.querySelector('.cursor');
+let mouseX=0, mouseY=0;
 document.addEventListener('mousemove', e=>{
+  mouseX=e.clientX;
+  mouseY=e.clientY;
   cursor.style.left = e.clientX + 'px';
   cursor.style.top = e.clientY + 'px';
 });
 
-// --- Лизергиновый пульс вокруг курсора ---
-setInterval(()=>{
-  cursor.style.background=`conic-gradient(hsl(${Math.random()*360},100%,50%),hsl(${Math.random()*360},100%,50%),hsl(${Math.random()*360},100%,50%))`;
-},200);
+// --- Лизергиновое облако --- 
+let cloud = [];
+for(let i=0;i<40;i++){
+  const c=document.createElement('div');
+  c.classList.add('psy-cloud');
+  c.style.width = c.style.height = (Math.random()*30+10)+'px';
+  c.style.opacity = Math.random()*0.6+0.2;
+  document.body.appendChild(c);
+  cloud.push({
+    el: c,
+    x: mouseX,
+    y: mouseY,
+    vx: (Math.random()-0.5)*5,
+    vy: (Math.random()-0.5)*5
+  });
+}
 
-// --- Треклист ---
-const btn=document.querySelector('.show-tracks');
-const tracklist=document.querySelector('.tracklist');
-btn.addEventListener('click',()=>{tracklist.style.display=tracklist.style.display==='block'?'none':'block';});
+function updateCloud(){
+  cloud.forEach(p=>{
+    // движемся к мыши плавно
+    let dx = mouseX - p.x + (Math.random()*50-25);
+    let dy = mouseY - p.y + (Math.random()*50-25);
+    p.vx += dx*0.02;
+    p.vy += dy*0.02;
+    p.vx *= 0.9;
+    p.vy *= 0.9;
+    p.x += p.vx;
+    p.y += p.vy;
+    p.el.style.left = p.x+'px';
+    p.el.style.top = p.y+'px';
+    p.el.style.background = `conic-gradient(hsl(${Math.random()*360},100%,50%),hsl(${Math.random()*360},100%,50%),hsl(${Math.random()*360},100%,50%))`;
+  });
+  requestAnimationFrame(updateCloud);
+}
+updateCloud();
 
 // --- Текст убегает от курсора ---
 const titleSpans=document.querySelectorAll('h1 span');
@@ -209,28 +149,22 @@ document.addEventListener('mousemove', e=>{
   });
 });
 
-// --- Линии ---
-const linesContainer=document.querySelector('.lines');
-for(let i=0;i<60;i++){
-  const line=document.createElement('div');
-  line.classList.add('line');
-  line.style.left=Math.random()*100+'vw';
-  line.style.animationDuration=(3+Math.random()*10)+'s';
-  linesContainer.appendChild(line);
+// --- Случайные странные всплывающие элементы ---
+function spawnStrange(){
+  const s = document.createElement('div');
+  s.classList.add('strange');
+  const texts = ['👁️','💀','☠️','😱','🕷️','⚡','☢️','🔥'];
+  s.textContent = texts[Math.floor(Math.random()*texts.length)];
+  s.style.left = Math.random()*100+'vw';
+  s.style.top = Math.random()*100+'vh';
+  s.style.transform = `rotate(${Math.random()*360}deg) scale(${Math.random()*2})`;
+  document.body.appendChild(s);
+  setTimeout(()=>{
+    s.style.opacity=0;
+    setTimeout(()=>s.remove(),500);
+  }, Math.random()*3000+2000);
 }
-
-// --- Эффекты галереи ---
-const galleryImages = document.querySelectorAll('.gallery img');
-setInterval(() => {
-  galleryImages.forEach(img => {
-    const dx = Math.random() * 20 - 10;
-    const dy = Math.random() * 20 - 10;
-    const rot = Math.random() * 20 - 10;
-    const hue = Math.random() * 360;
-    img.style.transform = `translate(${dx}px,${dy}px) rotate(${rot}deg)`;
-    img.style.filter = `hue-rotate(${hue}deg) blur(1px)`;
-  });
-}, 500);
+setInterval(spawnStrange, 800);
 
 // --- Вспышки при клике ---
 document.addEventListener('click', e => {
