--- a/index.html
+++ b/index.html
@@ -3,286 +3,210 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nightmare Trip 9000</title>
+<title>Ultimate Nightmare Trip 11/10</title>
 <style>
-body {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background: #0a001f;
-  font-family: 'Arial', sans-serif;
-  cursor: none;
-  color: white;
-  position: relative;
-}
-h1 {
-  font-size: 4em;
-  text-align: center;
-  margin: 40px 0;
-  position: relative;
-  z-index: 5;
-}
-h1 span {
-  display: inline-block;
-  transition: transform 0.1s, color 0.1s;
-}
-/* --- Курсор лизергин --- */
-.cursor {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  position: fixed;
-  pointer-events: none;
-  z-index: 9999;
-  transform: translate(-50%, -50%);
-  background: conic-gradient(
-    hsl(0,100%,50%), hsl(60,100%,50%), hsl(120,100%,50%), 
-    hsl(180,100%,50%), hsl(240,100%,50%), hsl(300,100%,50%), hsl(360,100%,50%)
-  );
-  mix-blend-mode: difference;
-  animation: pulse 1.5s infinite linear;
-}
-@keyframes pulse {
-  0%,100% { transform: translate(-50%, -50%) scale(1); }
-  50% { transform: translate(-50%, -50%) scale(1.4); }
+/* --- Основной стиль тела --- */
+body{
+  margin:0;
+  padding:0;
+  overflow:hidden;
+  background:#0a001f;
+  cursor:none;
+  font-family:sans-serif;
+  color:white;
+  position:relative;
+  transform-origin:center center;
 }
 
-/* --- Лизергиновое облако --- */
-.psy-cloud {
-  position: fixed;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  pointer-events: none;
-  z-index: 998;
-  background: conic-gradient(
-    hsl(0,100%,50%), hsl(60,100%,50%), hsl(120,100%,50%), 
+/* --- Заголовок --- */
+h1{
+  position:relative;
+  font-size:4em;
+  text-align:center;
+  margin:50px 0;
+  z-index:5;
+}
+h1 span{
+  display:inline-block;
+  transition: transform 0.1s,color 0.1s;
+}
+
+/* --- Лизергиновый курсор --- */
+.cursor{
+  width:80px;
+  height:80px;
+  border-radius:50%;
+  position:fixed;
+  pointer-events:none;
+  z-index:9999;
+  transform:translate(-50%,-50%);
+  background:conic-gradient(
+    hsl(0,100%,50%), hsl(60,100%,50%), hsl(120,100%,50%),
     hsl(180,100%,50%), hsl(240,100%,50%), hsl(300,100%,50%), hsl(360,100%,50%)
   );
-  mix-blend-mode: difference;
-  opacity: 0.6;
-  transform: translate(-50%, -50%);
+  mix-blend-mode:difference;
+  animation:pulse 1s infinite linear;
+}
+@keyframes pulse{
+  0%,100%{ transform:translate(-50%,-50%) scale(1); }
+  50%{ transform:translate(-50%,-50%) scale(1.5); }
+}
+
+/* --- Шлейф частиц за курсором --- */
+.trail{
+  position:fixed;
+  width:10px;
+  height:10px;
+  border-radius:50%;
+  pointer-events:none;
+  z-index:1000;
+  mix-blend-mode:difference;
+  opacity:0.7;
+}
+
+/* --- Лизергиновое облако вокруг курсора --- */
+.psy-cloud{
+  position:fixed;
+  width:30px;
+  height:30px;
+  border-radius:50%;
+  pointer-events:none;
+  z-index:998;
+  background:conic-gradient(
+    hsl(0,100%,50%), hsl(60,100%,50%), hsl(120,100%,50%),
+    hsl(180,100%,50%), hsl(240,100%,50%), hsl(300,100%,50%), hsl(360,100%,50%)
+  );
+  mix-blend-mode:difference;
+  opacity:0.6;
+  transform:translate(-50%,-50%);
 }
 
 /* --- Шум экрана --- */
-.noise {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  opacity: 0.05;
-  background: repeating-linear-gradient(
+.noise{
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  pointer-events:none;
+  opacity:0.05;
+  background:repeating-linear-gradient(
     0deg,
     rgba(255,255,255,0.05),
     rgba(255,255,255,0.05) 1px,
     rgba(0,0,0,0.05) 2px
   );
-  mix-blend-mode: difference;
-  animation: noiseAnim 0.05s infinite;
+  mix-blend-mode:difference;
+  animation:noiseAnim 0.05s infinite;
 }
-@keyframes noiseAnim {
+@keyframes noiseAnim{
   0%,100%{opacity:0.05;}
   50%{opacity:0.3;}
 }
 
 /* --- Вспышки --- */
-.flash {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  background: radial-gradient(circle, white 0%, transparent 80%);
-  opacity: 0;
-  mix-blend-mode: difference;
-  animation: flashAnim 0.3s forwards;
+.flash{
+  position:fixed;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
+  pointer-events:none;
+  background:radial-gradient(circle, white 0%, transparent 80%);
+  opacity:0;
+  mix-blend-mode:difference;
+  animation:flashAnim 0.3s forwards;
 }
-@keyframes flashAnim {
+@keyframes flashAnim{
   0%{opacity:0;}
   50%{opacity:0.7;}
   100%{opacity:0;}
 }
 
-/* --- Странные объекты --- */
-.strange {
-  position: fixed;
-  pointer-events: none;
-  z-index: 900;
-  font-size: 2em;
-  font-weight: bold;
-  color: red;
-  mix-blend-mode: difference;
-  opacity: 0.8;
+/* --- Странные элементы --- */
+.strange{
+  position:fixed;
+  pointer-events:none;
+  z-index:900;
+  font-size:2em;
+  font-weight:bold;
+  color:red;
+  mix-blend-mode:difference;
+  opacity:0.8;
   transition: transform 0.5s, opacity 0.5s;
 }
 
-/* --- Мелкие частицы шлейфа --- */
-.trail {
-  position: fixed;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  pointer-events: none;
-  z-index: 1000;
-  mix-blend-mode: difference;
-  opacity: 0.7;
+/* --- Фоновые хаотичные объекты --- */
+.chaos{
+  position:fixed;
+  pointer-events:none;
+  z-index:800;
+  mix-blend-mode:difference;
+  font-size:3em;
+  opacity:0.5;
+  transition: transform 0.5s;
+}
+
+/* --- Экранные мерцания --- */
+.screen-flicker{
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  pointer-events:none;
+  background:linear-gradient(45deg,rgba(255,0,255,0.1),rgba(0,255,255,0.1));
+  mix-blend-mode:difference;
+  opacity:0;
+  animation:flickerAnim 0.2s infinite;
+}
+@keyframes flickerAnim{
+  0%,100%{opacity:0;}
+  50%{opacity:0.3;}
 }
 </style>
 </head>
 <body>
 <h1 id="title">
-  <span>П</span><span>с</span><span>и</span><span>х</span><span>о</span><span>д</span><span>е</span><span>л</span><span>и</span><span>ч</span><span>е</span><span>с</span><span>к</span><span>и</span>
-  <span>й</span> <span>Х</span><span>а</span><span>о</span><span>с</span>
+  <span>Т</span><span>Р</span><span>И</span><span>П</span>
+  <span>О</span><span>В</span><span>Ы</span><span>Й</span>
+  <span>Х</span><span>А</span><span>О</span><span>С</span>
 </h1>
 
 <div class="cursor"></div>
 <div class="noise"></div>
+<div class="screen-flicker"></div>
 
 <script>
 // --- Курсор ---
 const cursor = document.querySelector('.cursor');
-let mouseX = 0, mouseY = 0;
+let mouseX = window.innerWidth/2, mouseY = window.innerHeight/2;
 document.addEventListener('mousemove', e=>{
   mouseX = e.clientX;
   mouseY = e.clientY;
-  cursor.style.left = e.clientX+'px';
-  cursor.style.top = e.clientY+'px';
+  cursor.style.left = mouseX+'px';
+  cursor.style.top = mouseY+'px';
 });
 
-// --- Лизергиновое облако ---
-let cloud=[];
-for(let i=0;i<120;i++){
-  const c=document.createElement('div');
-  c.classList.add('psy-cloud');
-  c.style.width=c.style.height=(Math.random()*40+10)+'px';
-  c.style.opacity=Math.random()*0.6+0.2;
-  document.body.appendChild(c);
-  cloud.push({
-    el:c,
-    x:mouseX,
-    y:mouseY,
-    vx:(Math.random()-0.5)*6,
-    vy:(Math.random()-0.5)*6
-  });
-}
-
-function updateCloud(){
-  cloud.forEach(p=>{
-    let dx=mouseX-p.x+(Math.random()*150-75);
-    let dy=mouseY-p.y+(Math.random()*150-75);
-    p.vx+=(dx*0.02);
-    p.vy+=(dy*0.02);
-    p.vx*=0.8;
-    p.vy*=0.8;
-    p.x+=p.vx;
-    p.y+=p.vy;
-    p.el.style.left=p.x+'px';
-    p.el.style.top=p.y+'px';
-    p.el.style.background=`conic-gradient(hsl(${Math.random()*360},100%,50%),hsl(${Math.random()*360},100%,50%),hsl(${Math.random()*360},100%,50%))`;
-  });
-  requestAnimationFrame(updateCloud);
-}
-updateCloud();
-
-// --- Текст убегает ---
-const titleSpans = document.querySelectorAll('h1 span');
-document.addEventListener('mousemove', e=>{
-  titleSpans.forEach(span=>{
-    const rect = span.getBoundingClientRect();
-    const dx = rect.left+rect.width/2 - e.clientX;
-    const dy = rect.top+rect.height/2 - e.clientY;
-    const dist = Math.sqrt(dx*dx+dy*dy);
-    if(dist < 300){
-      const moveX = dx/dist * 90;
-      const moveY = dy/dist * 90;
-      span.style.transform = `translate(${moveX}px,${moveY}px) rotate(${Math.random()*90-45}deg) scale(${Math.random()*1.5+0.5})`;
-      span.style.color = `hsl(${Math.random()*360},100%,50%)`;
-    } else {
-      span.style.transform = 'translate(0,0)';
-    }
-  });
-});
-
-// --- Странные элементы ---
-function spawnStrange(){
-  const s=document.createElement('div');
-  s.classList.add('strange');
-  const texts=['👁️','💀','☠️','😱','🕷️','⚡','☢️','🔥','👹','👽','🩸','☣️','☂️','👻','🧟','🦴'];
-  s.textContent=texts[Math.floor(Math.random()*texts.length)];
-  s.style.left=Math.random()*100+'vw';
-  s.style.top=Math.random()*100+'vh';
-  s.style.transform=`rotate(${Math.random()*360}deg) scale(${Math.random()*3})`;
-  s.style.color=`hsl(${Math.random()*360},100%,50%)`;
-  document.body.appendChild(s);
-  setTimeout(()=>{
-    s.style.opacity=0;
-    setTimeout(()=>s.remove(),500);
-  },Math.random()*4000+1000);
-}
-setInterval(spawnStrange,250);
-
-// --- Вспышки на клик ---
-document.addEventListener('click', e=>{
-  const flash=document.createElement('div');
-  flash.classList.add('flash');
-  document.body.appendChild(flash);
-  setTimeout(()=>flash.remove(),300);
-});
-
-// --- Экранный шум ---
-const noise=document.querySelector('.noise');
-setInterval(()=>{
-  noise.style.opacity=Math.random()*0.3+0.05;
-},50);
-
-// --- Постоянные хаотичные объекты ---
-function spawnChaos(){
-  const c=document.createElement('div');
-  c.classList.add('strange');
-  c.textContent=['⚡','🔥','☣️','💀','👹','💉','☠️','👁️','🕷️'][Math.floor(Math.random()*9)];
-  c.style.left=Math.random()*100+'vw';
-  c.style.top=Math.random()*100+'vh';
-  c.style.transform=`rotate(${Math.random()*360}deg) scale(${Math.random()*4})`;
-  c.style.color=`hsl(${Math.random()*360},100%,50%)`;
-  document.body.appendChild(c);
-  setTimeout(()=>c.remove(),Math.random()*3000+1000);
-}
-setInterval(spawnChaos,80);
-
-// --- Эксплозивные объекты ---
-function explode(){
-  const e=document.createElement('div');
-  e.classList.add('psy-cloud');
-  e.style.width=e.style.height=(Math.random()*70+20)+'px';
-  e.style.left=Math.random()*window.innerWidth+'px';
-  e.style.top=Math.random()*window.innerHeight+'px';
-  e.style.background=`conic-gradient(hsl(${Math.random()*360},100%,50%),hsl(${Math.random()*360},100%,50%),hsl(${Math.random()*360},100%,50%))`;
-  e.style.opacity=0.7;
-  document.body.appendChild(e);
-  setTimeout(()=>e.remove(),1500);
-}
-setInterval(explode,400);
-
-// --- Борода шлейфа частиц за курсором ---
-let trail=[];
+// --- Шлейф частиц ---
+let trail = [];
 function spawnTrail(){
-  for(let i=0;i<8;i++){
+  for(let i=0;i<10;i++){
     const t=document.createElement('div');
     t.classList.add('trail');
     t.style.background=`hsl(${Math.random()*360},100%,50%)`;
     t.x=mouseX; t.y=mouseY;
-    t.vx=(Math.random()-0.5)*10;
-    t.vy=(Math.random()-0.5)*10;
+    t.vx=(Math.random()-0.5)*15;
+    t.vy=(Math.random()-0.5)*15;
     document.body.appendChild(t);
     trail.push(t);
-    setTimeout(()=>{t.remove(); trail.splice(trail.indexOf(t),1)},3000);
+    setTimeout(()=>{
+      t.remove();
+      trail.splice(trail.indexOf(t),1);
+    },4000);
   }
 }
 document.addEventListener('mousemove',spawnTrail);
-
 function updateTrail(){
   trail.forEach(t=>{
     t.x+=t.vx;
@@ -294,12 +218,130 @@ function updateTrail(){
 }
 updateTrail();
 
+// --- Лизергиновое облако ---
+let cloud=[];
+for(let i=0;i<200;i++){
+  const c=document.createElement('div');
+  c.classList.add('psy-cloud');
+  c.style.width=c.style.height=(Math.random()*60+20)+'px';
+  c.style.opacity=Math.random()*0.6+0.2;
+  document.body.appendChild(c);
+  cloud.push({
+    el:c,
+    x:mouseX,
+    y:mouseY,
+    vx:(Math.random()-0.5)*8,
+    vy:(Math.random()-0.5)*8
+  });
+}
+function updateCloud(){
+  cloud.forEach(p=>{
+    let dx=mouseX-p.x+(Math.random()*300-150);
+    let dy=mouseY-p.y+(Math.random()*300-150);
+    p.vx+=(dx*0.03);
+    p.vy+=(dy*0.03);
+    p.vx*=0.7;
+    p.vy*=0.7;
+    p.x+=p.vx;
+    p.y+=p.vy;
+    p.el.style.left=p.x+'px';
+    p.el.style.top=p.y+'px';
+    p.el.style.background=`conic-gradient(hsl(${Math.random()*360},100%,50%),hsl(${Math.random()*360},100%,50%),hsl(${Math.random()*360},100%,50%))`;
+  });
+  requestAnimationFrame(updateCloud);
+}
+updateCloud();
+
+// --- Текст убегает от курсора ---
+const titleSpans = document.querySelectorAll('h1 span');
+document.addEventListener('mousemove', e=>{
+  titleSpans.forEach(span=>{
+    const rect = span.getBoundingClientRect();
+    const dx = rect.left+rect.width/2 - e.clientX;
+    const dy = rect.top+rect.height/2 - e.clientY;
+    const dist = Math.sqrt(dx*dx+dy*dy);
+    if(dist < 350){
+      const moveX = dx/dist * 120;
+      const moveY = dy/dist * 120;
+      span.style.transform = `translate(${moveX}px,${moveY}px) rotate(${Math.random()*120-60}deg) scale(${Math.random()*2})`;
+      span.style.color = `hsl(${Math.random()*360},100%,50%)`;
+    } else {
+      span.style.transform = 'translate(0,0) rotate(0deg) scale(1)';
+    }
+  });
+});
+
+// --- Странные объекты ---
+function spawnStrange(){
+  const s=document.createElement('div');
+  s.classList.add('strange');
+  const texts=['👁️','💀','☠️','😱','🕷️','⚡','☢️','🔥','👹','👽','🩸','☣️','☂️','👻','🧟','🦴'];
+  s.textContent=texts[Math.floor(Math.random()*texts.length)];
+  s.style.left=Math.random()*100+'vw';
+  s.style.top=Math.random()*100+'vh';
+  s.style.transform=`rotate(${Math.random()*360}deg) scale(${Math.random()*4})`;
+  s.style.color=`hsl(${Math.random()*360},100%,50%)`;
+  document.body.appendChild(s);
+  setTimeout(()=>{
+    s.style.opacity=0;
+    setTimeout(()=>s.remove(),500);
+  },Math.random()*6000+2000);
+}
+setInterval(spawnStrange,150);
+
+// --- Экранные вспышки на клик ---
+document.addEventListener('click', e=>{
+  const flash=document.createElement('div');
+  flash.classList.add('flash');
+  document.body.appendChild(flash);
+  setTimeout(()=>flash.remove(),300);
+});
+
+// --- Постоянные хаотичные объекты ---
+function spawnChaos(){
+  const c=document.createElement('div');
+  c.classList.add('chaos');
+  c.textContent=['⚡','🔥','☣️','💀','👹','💉','☠️','👁️','🕷️'][Math.floor(Math.random()*9)];
+  c.style.left=Math.random()*100+'vw';
+  c.style.top=Math.random()*100+'vh';
+  c.style.transform=`rotate(${Math.random()*360}deg) scale(${Math.random()*5})`;
+  c.style.color=`hsl(${Math.random()*360},100%,50%)`;
+  document.body.appendChild(c);
+  setTimeout(()=>c.remove(),Math.random()*5000+2000);
+}
+setInterval(spawnChaos,50);
+
+// --- Эксплозивные частицы ---
+function explode(){
+  const e=document.createElement('div');
+  e.classList.add('psy-cloud');
+  e.style.width=e.style.height=(Math.random()*120+40)+'px';
+  e.style.left=Math.random()*window.innerWidth+'px';
+  e.style.top=Math.random()*window.innerHeight+'px';
+  e.style.background=`conic-gradient(hsl(${Math.random()*360},100%,50%),hsl(${Math.random()*360},100%,50%),hsl(${Math.random()*360},100%,50%))`;
+  e.style.opacity=0.8;
+  document.body.appendChild(e);
+  setTimeout(()=>e.remove(),2000);
+}
+setInterval(explode,300);
+
 // --- Дрожащая страница ---
 document.addEventListener('mousemove', e=>{
-  const shakeX = (Math.random()-0.5)*5;
-  const shakeY = (Math.random()-0.5)*5;
+  const shakeX = (Math.random()-0.5)*15;
+  const shakeY = (Math.random()-0.5)*15;
   document.body.style.transform = `translate(${shakeX}px,${shakeY}px)`;
 });
+
+// --- Постоянные мерцания ---
+const flicker = document.querySelector('.screen-flicker');
+setInterval(()=>{
+  flicker.style.opacity=Math.random()*0.5;
+},100);
+
+// --- Конец первой волны хаоса ---
+// Следующий шаг: можно добавить ещё тысячи мелких анимированных элементов,
+// случайные линии, геометрические фигуры, бегущие текстовые потоки,
+// кислотные спирали и триповые тени по всей странице
 </script>
 </body>
 </html>
