--- a/index.html
+++ b/index.html
@@ -221,65 +221,8 @@
             <audio controls src="audio/track1.mp3"></audio>
         </div>
 
-        <div class="track">
-            <div class="track-name">Трек 2 — (название позже)</div>
-            <audio controls src="audio/track2.mp3"></audio>
-        </div>
+        <!-- другие треки ... -->
 
-        <div class="track">
-            <div class="track-name">Трек 3 — (название позже)</div>
-            <audio controls src="audio/track3.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 4 — (название позже)</div>
-            <audio controls src="audio/track4.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 5 — (название позже)</div>
-            <audio controls src="audio/track5.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 6 — (название позже)</div>
-            <audio controls src="audio/track6.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 7 — (название позже)</div>
-            <audio controls src="audio/track7.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 8 — (название позже)</div>
-            <audio controls src="audio/track8.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 9 — (название позже)</div>
-            <audio controls src="audio/track9.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 10 — (название позже)</div>
-            <audio controls src="audio/track10.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 11 — (название позже)</div>
-            <audio controls src="audio/track11.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 12 — (название позже)</div>
-            <audio controls src="audio/track1.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 13 — (название позже)</div>
-            <audio controls src="audio/track13.mp3"></audio>
-        </div>
     </div>
 </div>
 
@@ -306,9 +249,11 @@
     const modalClose = document.getElementById("modal-close");
     const cursor = document.getElementById("cursor");
     const openSound = document.getElementById("open-sound");
+
     let open = false;
     let modalShown = false;
 
+    // Клик на альбом
     album.addEventListener("click", () => {
         open = !open;
         if (open) {
@@ -324,6 +269,7 @@
         }
     });
 
+    // Закрытие модального окна
     modalClose.addEventListener("click", () => {
         modal.style.display = "none";  // Скрыть модальное окно
         modalShown = false;
@@ -333,15 +279,24 @@
     function spawnRat() {
         const rat = document.createElement("div");
         rat.classList.add("rat");
+
+        // Случайное положение
         rat.style.left = `${Math.random() * 100}vw`;
         rat.style.bottom = `${Math.random() * 100}vh`;
 
-        // Рандомизация скорости
-        const speed = Math.random() * 3 + 2;
+        // Случайная скорость и направление
+        const speed = Math.random() * 5 + 2;
+        const direction = Math.random() > 0.5 ? 1 : -1;  // Положительное или отрицательное движение
+
         rat.style.animationDuration = `${speed}s`;
+        rat.style.animationName = `ratMove`;
+
+        // Сдвиг движения (направление)
+        rat.style.animationDirection = direction === 1 ? "normal" : "reverse";
 
         document.body.appendChild(rat);
 
+        // Удаление крысы через определённое время
         setTimeout(() => {
             rat.remove();
         }, speed * 1000);
