--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     const openSound = document.getElementById("open-sound");
 
     let open = false;
-    let modalShown = false;
+    let modalShown = false;  // Слежение за состоянием модального окна
 
     // Клик на альбом
     album.addEventListener("click", () => {
@@ -272,7 +272,7 @@
     // Закрытие модального окна
     modalClose.addEventListener("click", () => {
         modal.style.display = "none";  // Скрыть модальное окно
-        modalShown = false;
+        modalShown = false;  // Устанавливаем флаг, чтобы окно не открылось снова
     });
 
     /* ---------------------- КРЫСЫ ---------------------- */
@@ -286,13 +286,14 @@
 
         // Случайная скорость и направление
         const speed = Math.random() * 5 + 2;
-        const direction = Math.random() > 0.5 ? 1 : -1;  // Положительное или отрицательное движение
+        const directionX = Math.random() > 0.5 ? 1 : -1;  // Положительное или отрицательное движение по X
+        const directionY = Math.random() > 0.5 ? 1 : -1;  // Положительное или отрицательное движение по Y
 
         rat.style.animationDuration = `${speed}s`;
         rat.style.animationName = `ratMove`;
 
-        // Сдвиг движения (направление)
-        rat.style.animationDirection = direction === 1 ? "normal" : "reverse";
+        // Движение в случайном направлении по обеим осям
+        rat.style.animationDirection = directionX === 1 ? "normal" : "reverse";
 
         document.body.appendChild(rat);
 
